Fix issue with sliders scrollbar

--- a/client/src/app/post/post-edit/post-edit.component.css
+++ b/client/src/app/post/post-edit/post-edit.component.css
@@ -162,6 +162,8 @@
 }
 
 .post_edit__editor_sliders {
+  position: absolute;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -170,17 +172,26 @@
   height: 100%;
   width: 100%;
 
+  overflow-y: scroll;
+
   padding: 2% 2%;
+}
+
+.post_edit__editor_sliders::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 
 .post_edit__range_slider_wrapper {
   flex-basis: 5%;
 
   width: 100%;
+
+  margin-bottom: 10%;
 }
 
 .post_edit__range_slider_name {
-  text-align: center;
+  padding-left: 2%;
   font-size: 1.5em;
 }
 
